syntax = 'proto3';

package auth;

service UsersSerivce {
    rpc CreateUser (CreateUserDto) returns (User) {}
    rpc FindAllUsers (Empty) returns(Users) {}
    rpc FindOneUser (FindOneUserDto) returns(User) {}
    rpc UpdateOneUser (UpdateOneUserDto) returns(User) {}
    rpc RemoveOneUser (FindOneUserDto) returns(User) {}
    rpc QueryUsers (stream PaginationDto) returns (stream Users) {}
}

message PaginationDto {

    int32 page = 1;
    int32 skip = 2;
}


message UpdateOneUserDto {

    string id = 1;
}


message FindOneUserDto {

    string id = 1;
}

message Empty {};

message Users {
    repeated User users = 1;
}

message CreateUserDto {
    string email = 1;
    string username = 2;
    string password = 3;
}

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
}
